--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     </nav>
     <h1>Hello, world!</h1>
     <div id="macropage">
-      {% include 'line_graph_macro.svg' %}
+      {% include 'NYC_boroughs.svg' %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
