--- a/templates/index.html
+++ b/templates/index.html
@@ -33,10 +33,23 @@
         </div>
       </div>
     </nav>
-    <h1>Hello, world!</h1>
+
     <div id="macropage">
       {% include 'NYC_boroughs.svg' %}
     </div>
+      <div>
+    <form action="/borough" method="GET">
+      <label for="borough">Choose a borough:</label><br>
+      <select name="borough" id="borough_select">
+        <option value="K" id="Brooklyn">Brooklyn</option>
+        <option value="M" id="Manhattan">Manhattan</option>
+        <option value="B" id="The_Bronx">The Bronx</option>
+        <option value="Q" id="Queens">Queens</option>
+        <option value="S" id="Staten_Island">Staten Island</option>
+      </select>
+      <input type="submit" value="Submit">
+    <form>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
 </html>
