--- a/templates/about.html
+++ b/templates/about.html
@@ -42,10 +42,21 @@
       </div>
     </nav>
   <h1>NYPD Arrest Data - Patrick Tang</h1>
-  <p>This investigation is meant to examine crimes statistics in NYC within recent years. This is intended to highlight the inequity present in policing. </p>
-  <p>  - Precinct: a designated geographical area and the main police station within that area </p>
+  <p>This investigation is meant to examine arrest in NYC within recent years. Especially in recent years,
+     the NYPD and police departments in general have come under fire for their poor management and distribution of their services,
+     facing critism for extending and perpetrating systematic racism, overpolicing certain more minority populated areas, and marginalization of racial and ethnic groups.
+     
+    
 
+</p>
+prototype 1 
+<img src="/images/protMac.jpeg" width="400" height = "400"
+ style="max-width: 400px; width: 100%; border: 1px solid #ccc; margin-right: 150px; transform: rotate(-90deg); "></img>
+<p>This protoype was meant to give a general birds-eye view of NYC and how certain boroughs were more policed than others. Some feedback that I recieved that I implenented was that it was hard to understand and make sense of due to lack of colors, and that more analysis beyond just a bar-graph would be helpful to understand what was going on. What I took away from this was that color was very important to visual clarity, and that visual clarity should not be compromised upon for almost any reason.</p>
+prototype 2
 
+<img src="/images/protMic.jpeg" width = "400" height = "400" style="max-width: 400px; width: 100%; border: 1px solid #ccc; margin-right: 150px; transform: rotate(-90deg); "></img>
+<p>This prototype was meant to give a more specific examination of certain boroughs, and even provide a look into intra-borough differences. However, due to complications and not being able to find a map including policing precincts, this had to be abandoned in service of convenience and general incompetence on my end. The feedback I recieved on this one was quite similar to the other protoype. While it was simple and with relatively few components, it was hard to focus specifically on anything due to it all being of the same color, being a dull gray. </p>
       <center>
     <footer text-align="center">This project investigates NYPD arrest statistics and how disproportionate amounts of arrests are made in different boroughs and on different people. All data provided by <a href="https://data.cityofnewyork.us/Public-Safety/NYPD-Arrest-Data-Year-to-Date-/uip8-fykc/about_data">NYC OpenData.</a></footer>
     </center>
